force-app/main/default/objects/invoice_finance_deal__c/fields/discount_amount_on_funded_amount__c.field-meta.xml
<CustomField>
    <fullName>discount_amount_on_funded_amount__c</fullName>
    <formula>discount_amount_paid_to_purchasers2__c + Total_Incomlend_Discount_Commissions__c + total_agent_discount_fees_commissions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>discount amount on funded amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>