force-app/main/default/objects/invoice_finance_deal__c/fields/discount_amount_on_funded_amount_USD_Equ__c.field-meta.xml
<CustomField>
    <fullName>discount_amount_on_funded_amount_USD_Equ__c</fullName>
    <formula>Marketplace_link__r.FX_Rate_for_MI__r.rate__c *   discount_amount_on_funded_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>discount amount on funded amount USD Equ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>