force-app/main/default/objects/invoice_finance_deal__c/fields/discount_amount_paid_to_purchasers2__c.field-meta.xml
<CustomField>
    <fullName>discount_amount_paid_to_purchasers2__c</fullName>
    <label>discount amount paid to purchasers</label>
    <summarizedField>Invoice_Allocation__c.funder_discount_amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Allocation__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Allocation__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>