force-app/main/default/objects/invoice_finance_deal__c/fields/Discount_Funder_Calcul__c.field-meta.xml
<CustomField>
    <fullName>Discount_Funder_Calcul__c</fullName>
    <description>Used for weighted  average Funder fee calculation</description>
    <formula>discount_rate__c  *  funded_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for weighted  average Funder fee calculation</inlineHelpText>
    <label>Discount Funder Calcul</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>