force-app/main/default/objects/invoice_finance_deal__c/fields/discount_rate__c.field-meta.xml
<CustomField>
    <fullName>discount_rate__c</fullName>
    <label>Funder discount rate</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>