force-app/main/default/objects/invoice_finance_deal__c/fields/Discount_Supplier_Calcul__c.field-meta.xml
<CustomField>
    <fullName>Discount_Supplier_Calcul__c</fullName>
    <description>Used for weighted average calcul of supplier discount</description>
    <formula>Total_Supplier_Discount__c  *  funded_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for weighted average calcul of supplier discount</inlineHelpText>
    <label>Discount Supplier Calcul</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>