force-app/main/default/objects/invoice_finance_deal__c/fields/Display_on_Secondary_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Display_on_Secondary_Marketplace__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the invoices that are currently funded by Incomlend’s Balance Sheet on the Secondary Marketplace to allow other funders to buy back the invoice</description>
    <label>Display on Secondary Marketplace</label>
    <type>Checkbox</type>
</CustomField>