force-app/main/default/objects/invoice_finance_deal__c/fields/Dispute_Optional_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Optional_Y_N__c</fullName>
    <label>Dispute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>