force-app/main/default/objects/invoice_finance_deal__c/fields/Document_Discrepancy_Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Document_Discrepancy_Approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Discrepancy Approved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Discrepancy_Approved_by</relationshipName>
    <type>Lookup</type>
</CustomField>