force-app/main/default/objects/invoice_finance_deal__c/fields/Document_Discrepancy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Document_Discrepancy_Notes__c</fullName>
    <label>Document Discrepancy Notes</label>
    <type>TextArea</type>
</CustomField>