force-app/main/default/objects/invoice_finance_deal__c/fields/Documents_Checked_by__c.field-meta.xml
<CustomField>
    <fullName>Documents_Checked_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documents Checked by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Documents_Checked_by</relationshipName>
    <type>Lookup</type>
</CustomField>