force-app/main/default/objects/invoice_finance_deal__c/fields/Documents_confirmed_complete__c.field-meta.xml
<CustomField>
    <fullName>Documents_confirmed_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>do we have a full set of documents as per the &apos;map supporting documents&apos;</description>
    <label>Documents confirmed complete</label>
    <type>Checkbox</type>
</CustomField>