force-app/main/default/objects/invoice_finance_deal__c/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Status</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>Invoice Finance Deals</relationshipLabel>
    <relationshipName>Invoice_Finance_Deals</relationshipName>
    <type>Lookup</type>
</CustomField>