force-app/main/default/objects/invoice_finance_deal__c/fields/due_date2__c.field-meta.xml
<CustomField>
    <fullName>due_date2__c</fullName>
    <description>with time for activation of the workflow timing</description>
    <formula>DATETIMEVALUE(Due_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>with time for activation of the workflow timing</inlineHelpText>
    <label>due date2</label>
    <type>DateTime</type>
</CustomField>