force-app/main/default/objects/invoice_finance_deal__c/fields/due_date_delta__c.field-meta.xml
<CustomField>
    <fullName>due_date_delta__c</fullName>
    <formula>If( IsBlank(Expected_Payment_Date__c), Due_Date__c, Expected_Payment_Date__c) - If( IsBlank(Actual_Repayment_Received_Date__c), today(), Actual_Repayment_Received_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>due date delta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>