force-app/main/default/objects/invoice_finance_deal__c/fields/due_date_delta_bucket_value__c.field-meta.xml
<CustomField>
    <fullName>due_date_delta_bucket_value__c</fullName>
    <defaultValue>&quot;No value&quot;</defaultValue>
    <externalId>true</externalId>
    <label>due date delta bucket value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>