force-app/main/default/objects/invoice_finance_deal__c/fields/DueDateTradeTech__c.field-meta.xml
<CustomField>
    <fullName>DueDateTradeTech__c</fullName>
    <formula>Expected_Payment_Date__c</formula>
    <label>DueDate</label>
    <type>Date</type>
</CustomField>