force-app/main/default/objects/invoice_finance_deal__c/fields/Earliest_date_of_funding__c.field-meta.xml
<CustomField>
    <fullName>Earliest_date_of_funding__c</fullName>
    <label>Earliest date of funding</label>
    <type>Date</type>
</CustomField>