force-app/main/default/objects/invoice_finance_deal__c/fields/Early_payment__c.field-meta.xml
<CustomField>
    <fullName>Early_payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early payment</label>
    <type>Checkbox</type>
</CustomField>