force-app/main/default/objects/invoice_finance_deal__c/fields/early_payment_transfer_date__c.field-meta.xml
<CustomField>
    <fullName>early_payment_transfer_date__c</fullName>
    <label>early payment date</label>
    <type>Date</type>
</CustomField>