force-app/main/default/objects/invoice_finance_deal__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <inlineHelpText>Date when the Financing will happen</inlineHelpText>
    <label>EffectiveDate</label>
    <type>Date</type>
</CustomField>