force-app/main/default/objects/invoice_finance_deal__c/fields/Email_buyer_for_reminder_email__c.field-meta.xml
<CustomField>
    <fullName>Email_buyer_for_reminder_email__c</fullName>
    <label>Email buyer for reminder email</label>
    <type>Email</type>
</CustomField>