force-app/main/default/objects/invoice_finance_deal__c/fields/Email_sent_Supplier_invoice_paid__c.field-meta.xml
<CustomField>
    <fullName>Email_sent_Supplier_invoice_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email sent Supplier invoice paid</label>
    <type>Checkbox</type>
</CustomField>