force-app/main/default/objects/invoice_finance_deal__c/fields/Email_sent_to_Rosemont__c.field-meta.xml
<CustomField>
    <fullName>Email_sent_to_Rosemont__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Rosemont invoice to be funded</label>
    <type>Checkbox</type>
</CustomField>