force-app/main/default/objects/invoice_finance_deal__c/fields/Email_sent_to_supplier_invoice_funded__c.field-meta.xml
<CustomField>
    <fullName>Email_sent_to_supplier_invoice_funded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email sent to supplier invoice funded</label>
    <type>Checkbox</type>
</CustomField>