force-app/main/default/objects/invoice_finance_deal__c/fields/Email_supplier_for_invoice_approval__c.field-meta.xml
<CustomField>
    <fullName>Email_supplier_for_invoice_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email supplier for invoice approval</label>
    <type>Checkbox</type>
</CustomField>