force-app/main/default/objects/invoice_finance_deal__c/fields/Emails_Order_placed__c.field-meta.xml
<CustomField>
    <fullName>Emails_Order_placed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emails Funders Order placed</label>
    <type>Checkbox</type>
</CustomField>