force-app/main/default/objects/invoice_finance_deal__c/fields/Emails_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Emails_Repayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emails Funders Repayment</label>
    <type>Checkbox</type>
</CustomField>