force-app/main/default/objects/invoice_finance_deal__c/fields/Euro_Finance_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Euro_Finance_in_USD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Euro-Finance in USD</label>
    <type>Checkbox</type>
</CustomField>