force-app/main/default/objects/invoice_finance_deal__c/fields/Expected_FDR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_FDR_Amount__c</fullName>
    <formula>ROUND(( discount_rate__c /30)* expected_financing_period__c * advanced_amount__c ,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected FDR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>