force-app/main/default/objects/invoice_finance_deal__c/fields/expected_financing_period__c.field-meta.xml
<CustomField>
    <fullName>expected_financing_period__c</fullName>
    <formula>if(isblank(Expected_Payment_Date__c), Due_Date__c, Expected_Payment_Date__c)
- 
if(isblank(advance_send_to_supplier_date__c), datevalue(Listing_End__c), advance_send_to_supplier_date__c) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>expected financing period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>