force-app/main/default/objects/invoice_finance_deal__c/fields/Expected_Funder_Discount_Expected_USD__c.field-meta.xml
<CustomField>
    <fullName>Expected_Funder_Discount_Expected_USD__c</fullName>
    <formula>Gross_funder_discount_amount_expected__c * Marketplace_link__r.FX_Rate_for_MI__r.rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Funder Discount AmountGross USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>