force-app/main/default/objects/invoice_finance_deal__c/fields/Expected_Payment_date_for_Reports__c.field-meta.xml
<CustomField>
    <fullName>Expected_Payment_date_for_Reports__c</fullName>
    <description>Expected Payment date for Report allow us to to have a Forecast</description>
    <inlineHelpText>Expected Payment date for Report allow us to to have a Forecast</inlineHelpText>
    <label>Expected Payment date for Reports</label>
    <type>Date</type>
</CustomField>