force-app/main/default/objects/invoice_finance_deal__c/fields/Expected_Supplier_discount_amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Expected_Supplier_discount_amount_USD__c</fullName>
    <formula>Total_supplier_discount_amount_expected__c  * Marketplace_link__r.FX_Rate_for_MI__r.rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Supplier discount amount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>