force-app/main/default/objects/invoice_finance_deal__c/fields/Expected_Tenor_Calcul__c.field-meta.xml
<CustomField>
    <fullName>Expected_Tenor_Calcul__c</fullName>
    <description>Used for Weighted Average Calcul Expected Tenor</description>
    <formula>expected_financing_period__c  *  funded_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for Weighted Average Calcul Expected Tenor</inlineHelpText>
    <label>Expected Tenor Calcul</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>