force-app/main/default/objects/invoice_finance_deal__c/fields/expected_Transaction_Fee_USD__c.field-meta.xml
<CustomField>
    <fullName>expected_Transaction_Fee_USD__c</fullName>
    <formula>Balance_for_upfront_fee__c * Marketplace_link__r.FX_Rate_for_MI__r.rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>expected Transaction Fee USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>