force-app/main/default/objects/invoice_finance_deal__c/fields/External_View__c.field-meta.xml
<CustomField>
    <fullName>External_View__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if you want to have a simplified external view for 3rd Parties, uncheck to come back to the normal view</inlineHelpText>
    <label>External View</label>
    <type>Checkbox</type>
</CustomField>