force-app/main/default/objects/invoice_finance_deal__c/fields/Factory_Amount__c.field-meta.xml
<CustomField>
    <fullName>Factory_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Full factory amount in its invoice</inlineHelpText>
    <label>Factory Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>