force-app/main/default/objects/invoice_finance_deal__c/fields/FD_amount_USD_phase_trigger__c.field-meta.xml
<CustomField>
    <fullName>FD_amount_USD_phase_trigger__c</fullName>
    <formula>IF (TEXT( Phase__c )=&quot;4:CLOSED&quot;,  Actual_Funder_Discount_AmountGross_USD__c ,  Expected_Funder_Discount_Expected_USD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FD amount USD (phase trigger)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>