force-app/main/default/objects/invoice_finance_deal__c/fields/FDR_Missing__c.field-meta.xml
<CustomField>
    <fullName>FDR_Missing__c</fullName>
    <formula>IF( discount_rate__c =0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FDR Missing</label>
    <type>Checkbox</type>
</CustomField>