force-app/main/default/objects/invoice_finance_deal__c/fields/Financed_Amount_for_MI__c.field-meta.xml
<CustomField>
    <fullName>Financed_Amount_for_MI__c</fullName>
    <formula>nullvalue( advance_amount_usd_equiv__c ,  remaining_amount_USD_Equivalent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financed Amount for MI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>