force-app/main/default/objects/invoice_finance_deal__c/fields/Financed_using_new_trust__c.field-meta.xml
<CustomField>
    <fullName>Financed_using_new_trust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financed using new trust</label>
    <type>Checkbox</type>
</CustomField>