force-app/main/default/objects/invoice_finance_deal__c/fields/financing_period_for_calcs__c.field-meta.xml
<CustomField>
    <fullName>financing_period_for_calcs__c</fullName>
    <formula>IF( actual_financing_period__c &gt; 0, actual_financing_period__c,  expected_financing_period__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>financing period for calcs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>