force-app/main/default/objects/invoice_finance_deal__c/fields/Financing_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Financing_Ratio__c</fullName>
    <formula>USD_Daily_FX_Advance_Amount__c /  USD_Daily_FX_Real_Value_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financing Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>