force-app/main/default/objects/invoice_finance_deal__c/fields/first_deal_for_map__c.field-meta.xml
<CustomField>
    <fullName>first_deal_for_map__c</fullName>
    <defaultValue>false</defaultValue>
    <label>first deal for map</label>
    <type>Checkbox</type>
</CustomField>