force-app/main/default/objects/invoice_finance_deal__c/fields/FixedRate__c.field-meta.xml
<CustomField>
    <fullName>FixedRate__c</fullName>
    <label>FixedRate</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>