force-app/main/default/objects/invoice_finance_deal__c/fields/Floating_Rate__c.field-meta.xml
<CustomField>
    <fullName>Floating_Rate__c</fullName>
    <description>floating rate at time of finance per annum</description>
    <inlineHelpText>per annum</inlineHelpText>
    <label>SOFR/EURIBOR Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>