force-app/main/default/objects/invoice_finance_deal__c/fields/Forwarded_Docs_Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_Docs_Tracking_URL__c</fullName>
    <label>Forwarded Docs Tracking URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>