force-app/main/default/objects/invoice_finance_deal__c/fields/Freight_Forwarder_Agent__c.field-meta.xml
<CustomField>
    <fullName>Freight_Forwarder_Agent__c</fullName>
    <label>Freight Forwarder / Agent</label>
    <type>TextArea</type>
</CustomField>