force-app/main/default/objects/invoice_finance_deal__c/fields/Freight_fwd_acknowledgment_asked_date__c.field-meta.xml
<CustomField>
    <fullName>Freight_fwd_acknowledgment_asked_date__c</fullName>
    <label>Freight fwd acknowledgment asked date</label>
    <type>DateTime</type>
</CustomField>