force-app/main/default/objects/invoice_finance_deal__c/fields/Freight_fwd_acknowledgment_contact__c.field-meta.xml
<CustomField>
    <fullName>Freight_fwd_acknowledgment_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freight fwd acknowledgment contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice Finance Deals (Freight fwd acknowledgment contact)</relationshipLabel>
    <relationshipName>Invoice_Finance_Deals2</relationshipName>
    <type>Lookup</type>
</CustomField>