force-app/main/default/objects/invoice_finance_deal__c/fields/Freight_fwd_acknowledgment_details__c.field-meta.xml
<CustomField>
    <fullName>Freight_fwd_acknowledgment_details__c</fullName>
    <label>Freight fwd acknowledgment details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>