force-app/main/default/objects/invoice_finance_deal__c/fields/Funded_age_of_the_map__c.field-meta.xml
<CustomField>
    <fullName>Funded_age_of_the_map__c</fullName>
    <label>Funded age of the map</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>