force-app/main/default/objects/invoice_finance_deal__c/fields/funded_amount__c.field-meta.xml
<CustomField>
    <fullName>funded_amount__c</fullName>
    <label>funded amount</label>
    <summarizedField>Invoice_Allocation__c.amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Allocation__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice_Allocation__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Buyback</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Allocation__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>