force-app/main/default/objects/invoice_finance_deal__c/fields/Funded_Date_Auto__c.field-meta.xml
<CustomField>
    <fullName>Funded_Date_Auto__c</fullName>
    <formula>IF( ISBLANK(Funded_Date__c ) = true,  advance_send_to_supplier_date__c , Funded_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funded Date (Auto)</label>
    <type>Date</type>
</CustomField>