force-app/main/default/objects/invoice_finance_deal__c/fields/Funder_Amount_PROGRES_PRE_LISTING__c.field-meta.xml
<CustomField>
    <fullName>Funder_Amount_PROGRES_PRE_LISTING__c</fullName>
    <description>Funded Amout in progress -preslistind, for calculation of the remaining Credit limit , and used in alaet if invoice is out of the Credit Limit range</description>
    <formula>Supplier_Buyer_Map__r.Funded_amount_in_progress_prelisting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Funded Amout in progress -preslisting, for calculation of the remaining Credit limit</inlineHelpText>
    <label>Funded Amount PROGRES PRE LISTING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>