force-app/main/default/objects/invoice_finance_deal__c/fields/Funder_Discount_Rate_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Funder_Discount_Rate_Calculated__c</fullName>
    <formula>Total_Applied_MPR__c /  Count_Applied_MPR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funder Discount Rate (Calculated)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>