force-app/main/default/objects/invoice_finance_deal__c/fields/Funder_floating_discount_rate__c.field-meta.xml
<CustomField>
    <fullName>Funder_floating_discount_rate__c</fullName>
    <formula>Floating_Rate__c + Funding_Spread__c</formula>
    <inlineHelpText>floating rate, not weighted-average, per annual</inlineHelpText>
    <label>Funder floating discount rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>