force-app/main/default/objects/invoice_finance_deal__c/fields/Funding_Spread__c.field-meta.xml
<CustomField>
    <fullName>Funding_Spread__c</fullName>
    <formula>Supplier_Buyer_Map__r.Funding_Spread__c</formula>
    <label>Funding Spread</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>