force-app/main/default/objects/invoice_finance_deal__c/fields/Funding_Spread_Margin__c.field-meta.xml
<CustomField>
    <fullName>Funding_Spread_Margin__c</fullName>
    <formula>discount_rate__c - Floating_Rate__c/12</formula>
    <label>Funding Spread Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>