force-app/main/default/objects/invoice_finance_deal__c/fields/Funding_Status__c.field-meta.xml
<CustomField>
    <fullName>Funding_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-Map Not Onboarded</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
                <label>1-Processing</label>
            </value>
            <value>
                <fullName>2-Pending BC</fullName>
            </value>
            <value>
                <fullName>Invoice Checked /Waiting for Allocation</fullName>
                <label>3-Invoice Checked /Waiting for Allocation</label>
            </value>
            <value>
                <fullName>Fund Available</fullName>
                <label>4-Fund Available</label>
            </value>
            <value>
                <fullName>Waiting for Repayment</fullName>
                <label>5-Waiting for Repayment</label>
            </value>
            <value>
                <fullName>No Credit Limit</fullName>
                <label>6-No Credit Limit</label>
            </value>
            <value>
                <fullName>Non Responsive</fullName>
                <label>7-Non Responsive</label>
            </value>
            <value>
                <fullName>Rejected by Incomlend</fullName>
                <label>8-Rejected by Incomlend</label>
            </value>
            <value>
                <fullName>No Funding Expected</fullName>
                <label>9-No Funding Expected</label>
            </value>
            <value>
                <fullName>10-Pending internal approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>