force-app/main/default/objects/invoice_finance_deal__c/fields/FundingMargin__c.field-meta.xml
<CustomField>
    <fullName>FundingMargin__c</fullName>
    <inlineHelpText>For a funded participation the amount of return that is paid to the investor for the funding for the funding of the position (can be 0) keep blank</inlineHelpText>
    <label>FundingMargin</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>