force-app/main/default/objects/invoice_finance_deal__c/fields/Funds_Available__c.field-meta.xml
<CustomField>
    <fullName>Funds_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check when fund are available used in a flow to send a slack to send the NOA</description>
    <inlineHelpText>To check when funds are available</inlineHelpText>
    <label>Funds Available</label>
    <type>Checkbox</type>
</CustomField>