force-app/main/default/objects/invoice_finance_deal__c/fields/FX_conversion_rate__c.field-meta.xml
<CustomField>
    <fullName>FX_conversion_rate__c</fullName>
    <label>FX conversion rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>