force-app/main/default/objects/invoice_finance_deal__c/fields/FX_ID__c.field-meta.xml
<CustomField>
    <fullName>FX_ID__c</fullName>
    <label>FX ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>