force-app/main/default/objects/invoice_finance_deal__c/fields/FX_reverse_rate__c.field-meta.xml
<CustomField>
    <fullName>FX_reverse_rate__c</fullName>
    <label>FX reverse rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>